--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "bulma": "^0.9.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "firebase": "^8.3.1",
