--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   },
   "dependencies": {
     "@myspace-nu/jquery.fancytable": "^1.0.9",
+    "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
+    "firebase-auth": "^0.1.2",
     "handlebars": "^4.7.7",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.1"
